--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
@@ -51,7 +51,7 @@
         </StackPanel>
         <ScrollViewer Grid.Column="1">
             <StackPanel Margin="0 10 0 20" VerticalAlignment="Top" HorizontalAlignment="Center">
-                <Border x:Name="PassportBorder" Visibility="Collapsed" Style="{DynamicResource BorderInformationWorker}" Margin="0 0 0 10">
+                <Border x:Name="PassportBorder" Style="{DynamicResource BorderInformationWorker}" Margin="0 0 0 10">
                     <StackPanel Margin="10">
                         <TextBlock
                             Foreground="#462AD8"
@@ -384,7 +384,7 @@
                         </Grid>
                     </StackPanel>
                 </Border>
-                <Border x:Name="PlaceResidenceBorder" Style="{DynamicResource BorderInformationWorker}">
+                <Border x:Name="PlaceResidenceBorder" Visibility="Visible" Style="{DynamicResource BorderInformationWorker}">
                     <Grid Margin="10">
                         <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <TextBlock
