--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
@@ -384,7 +384,7 @@
                         </Grid>
                     </StackPanel>
                 </Border>
-                <Border x:Name="PlaceResidenceBorder" Visibility="Visible" Style="{DynamicResource BorderInformationWorker}">
+                <Border x:Name="PlaceResidenceBorder" Style="{DynamicResource BorderInformationWorker}">
                     <Grid Margin="10">
                         <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <TextBlock
@@ -566,7 +566,7 @@
                         </StackPanel>
                     </Grid>
                 </Border>
-                <Border x:Name="MedicalBookBorder" Style="{DynamicResource BorderInformationWorker}">
+                <Border x:Name="MedicalBookBorder" Visibility="Visible" Style="{DynamicResource BorderInformationWorker}">
                     <StackPanel Margin="10" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
                         <TextBlock
                             Foreground="#462AD8"
