--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
@@ -937,7 +937,7 @@
                         </StackPanel>
                     </StackPanel>
                 </Border>
-                <Border x:Name="SalaryCardBorder" Visibility="Visible" Style="{DynamicResource BorderInformationWorker}">
+                <Border x:Name="SalaryCardBorder" Style="{DynamicResource BorderInformationWorker}">
                     <StackPanel Margin="10" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
                         <TextBlock
                             Foreground="#462AD8"
@@ -979,12 +979,12 @@
                                         <Border Style="{DynamicResource ShadowBorder}">
                                             <Border.Effect>
                                                 <DropShadowEffect 
-                                                Direction="315"
-                                                Color="{DynamicResource ShadowColor}"
-                                                BlurRadius="5"
-                                                ShadowDepth="2"
-                                                Opacity="0.5"
-                                                RenderingBias="Performance"/>
+                                                    Direction="315"
+                                                    Color="{DynamicResource ShadowColor}"
+                                                    BlurRadius="5"
+                                                    ShadowDepth="2"
+                                                    Opacity="0.5"
+                                                    RenderingBias="Performance"/>
                                             </Border.Effect>
                                         </Border>
                                         <TextBox
@@ -1002,12 +1002,12 @@
                                         <Border Style="{DynamicResource ShadowBorder}">
                                             <Border.Effect>
                                                 <DropShadowEffect 
-                                                Direction="315"
-                                                Color="{DynamicResource ShadowColor}"
-                                                BlurRadius="5"
-                                                ShadowDepth="2"
-                                                Opacity="0.5"
-                                                RenderingBias="Performance"/>
+                                                    Direction="315"
+                                                    Color="{DynamicResource ShadowColor}"
+                                                    BlurRadius="5"
+                                                    ShadowDepth="2"
+                                                    Opacity="0.5"
+                                                    RenderingBias="Performance"/>
                                             </Border.Effect>
                                         </Border>
                                         <TextBox
@@ -1101,7 +1101,7 @@
                         </StackPanel>
                     </StackPanel>
                 </Border>
-                <Border Margin="0 10 0 20" x:Name="GeneralDataBorder" Style="{DynamicResource BorderInformationWorker}">
+                <Border Margin="0 10 0 20" Visibility="Visible" x:Name="GeneralDataBorder" Style="{DynamicResource BorderInformationWorker}">
                     <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10">
                         <TextBlock
                             Foreground="#462AD8"
