--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
@@ -1101,7 +1101,7 @@
                         </StackPanel>
                     </StackPanel>
                 </Border>
-                <Border Margin="0 10 0 20" Visibility="Visible" x:Name="GeneralDataBorder" Style="{DynamicResource BorderInformationWorker}">
+                <Border Margin="0 10 0 20" x:Name="GeneralDataBorder" Style="{DynamicResource BorderInformationWorker}">
                     <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10">
                         <TextBlock
                             Foreground="#462AD8"
