--- a/DesctopHITE/AppDateFolder/StyleFolder/PasswordBoxDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/PasswordBoxDictionary.xaml
@@ -5,8 +5,8 @@
         <Setter Property="Foreground" Value="#FFFFFF"/>
         <Setter Property="Background" Value="#202020"/>
         <Setter Property="CaretBrush" Value="#ffffff"/>
-        <Setter Property="BorderBrush" Value="Transparent"/>
-        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="BorderBrush" Value="#202020"/>
+        <Setter Property="BorderThickness" Value="0.5"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="Padding" Value="5 0 5 0"/>
