--- a/DesctopHITE/AppDateFolder/StyleFolder/TextBoxDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/TextBoxDictionary.xaml
@@ -5,8 +5,8 @@
         <Setter Property="Foreground" Value="#f5f5f5"/>
         <Setter Property="Background" Value="#202020"/>
         <Setter Property="CaretBrush" Value="#f5f5f5"/>
-        <Setter Property="BorderBrush" Value="Transparent"/>
-        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="BorderBrush" Value="#202020"/>
+        <Setter Property="BorderThickness" Value="0.5"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="Padding" Value="10 0 10 0"/>
