--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
@@ -50,7 +50,7 @@
                 Style="{DynamicResource MainMenuToggleButtonStyle}"/>
         </StackPanel>
         <ScrollViewer Grid.Column="1">
-            <StackPanel Margin="0 10 0 20" VerticalAlignment="Top" HorizontalAlignment="Center">
+            <StackPanel x:Name="MainStackPanel" Margin="0 10 0 20" VerticalAlignment="Top" HorizontalAlignment="Center">
                 <Border x:Name="PassportBorder" Style="{DynamicResource BorderInformationWorker}" Margin="0 0 0 10">
                     <StackPanel Margin="10">
                         <TextBlock
