--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
@@ -111,6 +111,7 @@
                                                 </Border.Effect>
                                             </Border>
                                             <TextBox
+                                                PreviewKeyDown="CtrlV_PreviewKeyDown" 
                                                 PreviewTextInput = "DateValidationTextBox"
                                                 MaxLength="10"
                                                 x:Name="DateIssuedPassportTextBox"
@@ -135,6 +136,7 @@
                                                 </Border.Effect>
                                             </Border>
                                             <TextBox
+                                                PreviewKeyDown="CtrlV_PreviewKeyDown"
                                                 PreviewTextInput = "DivisionCodeValidationTextBox"
                                                 MaxLength="7"
                                                 x:Name="DivisionCodePassportTextBox"
@@ -161,6 +163,7 @@
                                                 </Border.Effect>
                                             </Border>
                                             <TextBox
+                                                PreviewKeyDown="CtrlV_PreviewKeyDown"
                                                 PreviewTextInput = "NumberValidationTextBox"
                                                 MaxLength="4"
                                                 x:Name="SeriesPassportTextBox"
@@ -185,6 +188,7 @@
                                                 </Border.Effect>
                                             </Border>
                                             <TextBox
+                                                PreviewKeyDown="CtrlV_PreviewKeyDown"
                                                 PreviewTextInput = "NumberValidationTextBox"
                                                 MaxLength="6"
                                                 x:Name="NumberPassportTextBox"
@@ -343,6 +347,7 @@
                                                     </Border.Effect>
                                                 </Border>
                                                 <TextBox
+                                                    PreviewKeyDown="CtrlV_PreviewKeyDown"
                                                     PreviewTextInput = "DateValidationTextBox"
                                                     MaxLength="10"
                                                     x:Name="DateOfBrichPassportTextBox"
@@ -412,6 +417,7 @@
                                         </Border.Effect>
                                     </Border>
                                     <TextBox
+                                        PreviewKeyDown="CtrlV_PreviewKeyDown"
                                         Padding="0"
                                         HorizontalContentAlignment="Center"
                                         PreviewTextInput = "DateValidationTextBox"
@@ -531,6 +537,7 @@
                                             </Border.Effect>
                                         </Border>
                                         <TextBox
+                                            PreviewKeyDown="CtrlV_PreviewKeyDown"
                                             PreviewTextInput = "NumberValidationTextBox"
                                             MaxLength="10"
                                             x:Name="HousePlaceResidenceTextBox"
@@ -555,6 +562,7 @@
                                             </Border.Effect>
                                         </Border>
                                         <TextBox
+                                            PreviewKeyDown="CtrlV_PreviewKeyDown"
                                             PreviewTextInput = "NumberValidationTextBox"
                                             MaxLength="10"
                                             x:Name="FlatPlaceResidenceTextBox"
@@ -593,6 +601,7 @@
                                     </Border.Effect>
                                 </Border>
                                 <TextBox
+                                    PreviewKeyDown="CtrlV_PreviewKeyDown"
                                     MaxLength="8"
                                     PreviewTextInput = "NumberValidationTextBox"
                                     x:Name="PersonalNumberMedicalBookTextBox"
@@ -646,6 +655,7 @@
                                         </Border.Effect>
                                     </Border>
                                     <TextBox
+                                        PreviewKeyDown="CtrlV_PreviewKeyDown"
                                         PreviewTextInput = "DateValidationTextBox"
                                         MaxLength="10"
                                         x:Name="DateIssueMedicalBookTextBox"
@@ -789,6 +799,7 @@
                                         </Border.Effect>
                                     </Border>
                                     <TextBox
+                                        PreviewKeyDown="CtrlV_PreviewKeyDown"
                                         PreviewTextInput = "NumberValidationTextBox"
                                         MaxLength="11"
                                         x:Name="PersonalNumberSnilsTextBox"
@@ -813,6 +824,7 @@
                                         </Border.Effect>
                                     </Border>
                                     <TextBox
+                                        PreviewKeyDown="CtrlV_PreviewKeyDown"
                                         PreviewTextInput = "DateValidationTextBox"
                                         MaxLength="10"
                                         x:Name="DateRegistrationSnilsTextBox"
@@ -849,6 +861,7 @@
                                         </Border.Effect>
                                     </Border>
                                     <TextBox
+                                        PreviewKeyDown="CtrlV_PreviewKeyDown"
                                         PreviewTextInput = "NumberValidationTextBox"
                                         MaxLength="12"
                                         x:Name="PersonalNumberINNTextBox"
@@ -873,6 +886,7 @@
                                         </Border.Effect>
                                     </Border>
                                     <TextBox
+                                        PreviewKeyDown="CtrlV_PreviewKeyDown"
                                         PreviewTextInput = "NumberValidationTextBox"
                                         MaxLength="4"
                                         x:Name="NumberTaxAuthorityINNTextBox"
@@ -927,6 +941,7 @@
                                         </Border.Effect>
                                     </Border>
                                     <TextBox
+                                        PreviewKeyDown="CtrlV_PreviewKeyDown"
                                         PreviewTextInput = "DateValidationTextBox"
                                         MaxLength="10"
                                         x:Name="DateINNTextBox"
@@ -963,6 +978,7 @@
                                         </Border.Effect>
                                     </Border>
                                     <TextBox
+                                        PreviewKeyDown="CtrlV_PreviewKeyDown"
                                         PreviewTextInput = "NumberValidationTextBox"
                                         MaxLength="16"
                                         x:Name="PersonalNumberSalaryCardTextBox"
@@ -1037,6 +1053,7 @@
                                                 </Border.Effect>
                                             </Border>
                                             <TextBox
+                                                PreviewKeyDown="CtrlV_PreviewKeyDown"
                                                 PreviewTextInput = "NumberValidationTextBox" 
                                                 MaxLength="2"
                                                 x:Name="MonthSalaryCardTextBox"
@@ -1065,6 +1082,7 @@
                                                 </Border.Effect>
                                             </Border>
                                             <TextBox
+                                                PreviewKeyDown="CtrlV_PreviewKeyDown"
                                                 PreviewTextInput = "NumberValidationTextBox"
                                                 MaxLength="4"
                                                 x:Name="YearEndSalaryCardTextBox"
@@ -1090,6 +1108,7 @@
                                             </Border.Effect>
                                         </Border>
                                         <TextBox
+                                            PreviewKeyDown="CtrlV_PreviewKeyDown"
                                             PreviewTextInput = "NumberValidationTextBox"
                                             MaxLength="3"
                                             x:Name="CodeSalaryCardTextBox"
@@ -1101,7 +1120,7 @@
                         </StackPanel>
                     </StackPanel>
                 </Border>
-                <Border Margin="0 10 0 20" x:Name="GeneralDataBorder" Style="{DynamicResource BorderInformationWorker}">
+                <Border Margin="0 10 0 20" Visibility="Visible" x:Name="GeneralDataBorder" Style="{DynamicResource BorderInformationWorker}">
                     <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10">
                         <TextBlock
                             Foreground="#462AD8"
@@ -1150,6 +1169,7 @@
                                         </Border.Effect>
                                     </Border>
                                     <TextBox
+                                        PreviewKeyDown="CtrlV_PreviewKeyDown"
                                         PreviewTextInput="NumberValidationTextBox"
                                         MaxLength="11"
                                         x:Name="PhoneWorkerTextBox"
@@ -1198,6 +1218,7 @@
                                         </Border.Effect>
                                     </Border>
                                     <TextBox
+                                        PreviewKeyDown="CtrlV_PreviewKeyDown"
                                         MaxLength="70"
                                         x:Name="LoginWorkerTextBox"
                                         Width="600"
@@ -1221,6 +1242,7 @@
                                         </Border.Effect>
                                     </Border>
                                     <TextBox
+                                        PreviewKeyDown="CtrlV_PreviewKeyDown"
                                         MaxLength="50"
                                         x:Name="PasswordWorkerTextBox"
                                         Width="600"
@@ -1244,6 +1266,7 @@
                                         </Border.Effect>
                                     </Border>
                                     <PasswordBox
+                                        PreviewKeyDown="CtrlV_PreviewKeyDown"
                                         LayoutUpdated ="RepeatPasswordWorkerTextBox_LayoutUpdated"
                                         MaxLength="50"
                                         x:Name="RepeatPasswordWorkerTextBox"
