--- a/DesctopHITE/AppDateFolder/StyleFolder/BorderDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/BorderDictionary.xaml
@@ -15,6 +15,11 @@
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="CornerRadius" Value="10"/>
     </Style>
+    <Style x:Key="OtherShadowBorder" TargetType="Border" BasedOn="{StaticResource MainBorderStyle}">
+        <Setter Property="Height" Value="Auto"/>
+        <Setter Property="MinHeight" Value="45"/>
+        <Setter Property="MaxHeight" Value="130"/>
+    </Style>
     <Style x:Key="BorderInformationWorker" TargetType="Border">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="#f5f5f5"/>
