--- a/DesctopHITE/AppDateFolder/StyleFolder/TextBoxDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/TextBoxDictionary.xaml
@@ -46,4 +46,11 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <Style x:Key="OtherTextBoxStyle" TargetType="TextBox" BasedOn="{StaticResource MainTextBoxStyle}">
+        <Setter Property="Height" Value="Auto"/>
+        <Setter Property="MinHeight" Value="45"/>
+        <Setter Property="MaxHeight" Value="130"/>
+        <Setter Property="Padding" Value="10"/>
+        <Setter Property="TextWrapping" Value="Wrap"/>
+    </Style>
 </ResourceDictionary>
