--- a/DesctopHITE/AppDateFolder/StyleFolder/StackPanelDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/StackPanelDictionary.xaml
@@ -26,7 +26,7 @@
     </Style>
     <Style x:Key="TextBlockDominatesTextBoxStackPanel" TargetType="StackPanel"> <!--TextBlock доминирует над TextBox-->
         <Setter Property="Orientation" Value="Vertical"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="Margin" Value="0 5 0 5"/>
     </Style>
