--- a/DesctopHITE/App.xaml
+++ b/DesctopHITE/App.xaml
@@ -20,6 +20,7 @@
                 <ResourceDictionary Source="\AppDateFolder\StyleFolder\ImageDictionary.xaml"/>
                 <ResourceDictionary Source="\AppDateFolder\StyleFolder\ScrollViewerDictionary.xaml"/>
                 <ResourceDictionary Source="\AppDateFolder\StyleFolder\ComboBoxDictionary.xaml"/>
+                <ResourceDictionary Source="\AppDateFolder\StyleFolder\ListBoxDictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
