--- a/DesctopHITE/PerformanceFolder/UserControlFolder/ListWorkerControl.xaml
+++ b/DesctopHITE/PerformanceFolder/UserControlFolder/ListWorkerControl.xaml
@@ -5,41 +5,46 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     mc:Ignorable="d" 
-    Height="Auto"
-    Width="auto">
+    Height="220"
+    Width="150">
     <Border CornerRadius="10" Background="Transparent" BorderBrush="Transparent" BorderThickness="0">
         <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
             <StackPanel Margin="0 0 0 5" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
-                <Path 
-                    x:Name="MaskMorderPath"
-                    Stroke="#f5f5f5" 
-                    StrokeThickness="0" 
-                    Fill="#f5f5f5"
-                    Data="M 0,20 l 20,-20 h 80 l 20,20 v 80 l -20,20 h -80 l -20,-20 z">
-                </Path>
-                <StackPanel VerticalAlignment="Top" HorizontalAlignment="Center">
-                    <StackPanel.OpacityMask>
-                        <VisualBrush Visual="{Binding ElementName=MaskMorderPath}"/>
-                    </StackPanel.OpacityMask>
-                    <Image 
-                        Stretch="UniformToFill"
-                        Opacity="1"
-                        x:Name="UserImage" 
-                        Source="{Binding PassportTable.Image_Passport}"/>
-                </StackPanel>
+                <Grid>
+                    <Border 
+                        VerticalAlignment="Top"
+                        x:Name="MaskMorderBorder" 
+                        Style="{StaticResource MaskBorder}"/>
+                    <StackPanel VerticalAlignment="Top" HorizontalAlignment="Center">
+                        <StackPanel.OpacityMask>
+                            <VisualBrush Visual="{Binding ElementName=MaskMorderBorder}"/>
+                        </StackPanel.OpacityMask>
+                        <Image 
+                            Height="150"
+                            Width="150"
+                            Stretch="UniformToFill"
+                            Opacity="1"
+                            x:Name="UserImage" 
+                            Source="{Binding PassportTable.Image_Passport}"/>
+                    </StackPanel>
+                </Grid>
                 <StackPanel Margin="0 5 0 2" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <TextBlock 
-                        Style="{DynamicResource MainStyleTextBlock}"
-                        Text="{Binding PassportTable.Surname_Passport}"/>
-                    <TextBlock 
-                        Style="{DynamicResource MainStyleTextBlock}"
-                        Text="{Binding PassportTable.Name_Passport}"/>
-                    <TextBlock 
-                        Style="{DynamicResource MainStyleTextBlock}"
-                        Text="{Binding PassportTable.Middlename_Passport}"/>
+                    <TextBlock
+                        Width="150"
+                        TextWrapping="WrapWithOverflow"
+                        FontSize="15"
+                        Margin="0"
+                        Style="{DynamicResource MainStyleTextBlock}">
+                        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
+                            <TextBlock Text="{Binding PassportTable.Surname_Passport}" Margin="0 0 2 0"/>
+                            <TextBlock Text="{Binding PassportTable.Name_Passport}" Margin="2 0 2 0"/>
+                            <TextBlock Text="{Binding PassportTable.Middlename_Passport}" Margin="2 0 0 0"/>
+                        </StackPanel>
+                    </TextBlock>
                 </StackPanel>
                 <StackPanel Margin="0 2 0 0" VerticalAlignment="Center" HorizontalAlignment="Center">
                     <TextBlock 
+                        FontSize="15"
                         Style="{DynamicResource MainStyleTextBlock}"
                         Text="{Binding StatusTable.Title_Status}"/>
                 </StackPanel>
