--- a/DesctopHITE/PerformanceFolder/UserControlFolder/ListWorkerControl.xaml
+++ b/DesctopHITE/PerformanceFolder/UserControlFolder/ListWorkerControl.xaml
@@ -5,11 +5,20 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     mc:Ignorable="d" 
-    Height="220"
-    Width="150">
-    <Border CornerRadius="10" Background="Transparent" BorderBrush="Transparent" BorderThickness="0">
+    Height="250"
+    Width="200">
+    <Border CornerRadius="10" Background="#2a2a2a" BorderBrush="Transparent" BorderThickness="0">
+        <Border.Effect>
+            <DropShadowEffect 
+                Direction="315"
+                Color="{DynamicResource ShadowColor}"
+                BlurRadius="5"
+                ShadowDepth="2"
+                Opacity="0.5"
+                RenderingBias="Performance"/>
+        </Border.Effect>
         <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
-            <StackPanel Margin="0 0 0 5" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <StackPanel Margin="0 0 0 10" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
                 <Grid>
                     <Border 
                         VerticalAlignment="Top"
@@ -28,23 +37,25 @@
                             Source="{Binding PassportTable.Image_Passport}"/>
                     </StackPanel>
                 </Grid>
-                <StackPanel Margin="0 5 0 2" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                <StackPanel Margin="0 10 0 2" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
                     <TextBlock
-                        Width="150"
-                        TextWrapping="Wrap"
+                        TextAlignment="Center"
                         FontSize="15"
                         Margin="0"
                         Style="{DynamicResource MainStyleTextBlock}">
-                        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
-                            <TextBlock Text="{Binding PassportTable.Surname_Passport}" Margin="0 0 2 0"/>
-                            <TextBlock Text="{Binding PassportTable.Name_Passport}" Margin="2 0 2 0"/>
+                        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Vertical">
+                            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                                <TextBlock Text="{Binding PassportTable.Surname_Passport}" Margin="0 0 2 0"/>
+                                <TextBlock Text="{Binding PassportTable.Name_Passport}" Margin="2 0 2 0"/>
+                            </StackPanel>
                             <TextBlock Text="{Binding PassportTable.Middlename_Passport}" Margin="2 0 0 0"/>
                         </StackPanel>
                     </TextBlock>
                 </StackPanel>
                 <StackPanel Margin="0 2 0 0" VerticalAlignment="Center" HorizontalAlignment="Center">
                     <TextBlock 
-                        FontSize="9"
+                        Foreground="#9a9a9a"
+                        FontSize="12"
                         Style="{DynamicResource MainStyleTextBlock}"
                         Text="{Binding StatusTable.Title_Status}"/>
                 </StackPanel>
